fix project descriptions so they won't cut off on mobile view

--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -114,9 +114,13 @@ footer {
 
 .project-item {
   width: 240px;
-  height: 300px;
+  height: 320px;
   margin-top: 10px;
   margin-bottom: 200px;
+}
+
+.caption {
+  margin-top: 10px;
 }
 
 /* Contact */
